2012-10-01 ~~ 2012-10-07
    by Ray Shih:
        view source code
    by Brian Hu:
		view source code
    by 陳政瑋
        Port Roystonea Project to GitHub

2012-10-08 ~~ 2012-10-14
    by Ray Shih:
        view source code and learning xen and libvirt
    by Brian Hu:
		view source code and learning iptables
    by 陳政瑋
        check licence, writing PMM.py(PM management daemon)

2012-10-15 ~~ 2012-10-21
    by Ray Shih:
        導入mustache當做設定檔template system
        改寫成libvirt python binding (for ubuntu vm)
        建立自動化測試for ubuntu vm on libvirt
        實作 royctl run 介面
            sudo royctl.py run {{package_name}} "{{execute_method_include_params}}"

	by Brian Hu:
		write logger.py, other scripts can use logger simply by importing logger now
		implement Coordinator.py( there are still some issues about mysql db)
		move Coordinator's configuration from the script itself to config file, so it's much more plugable now
    
    by 陳政瑋
        讓 commmon handler daemon process 的 parent 不再是 admin login 的 shell。

2012-10-22 ~~ 2012-10-28
    by Ray Shih:
        refactor the vm_initializer to vm_manager
        Todo:
            implement the apache vm
            Deal with request of init a vm
            